Improving IOPinEditorWidget code (a lil)